Fix header menu layout bug: cart icon@1.1

--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -90,7 +90,7 @@
             color: $light-grey;
             font-size: 14px;
             text-align: center;
-            padding: 0 0 0 16px;
+            padding: 0 0 0 15px;
             float: none;
             display: inline-block;
         }
